--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6881743ee1.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>DropDown Menu</title>
 </head>
@@ -13,7 +16,7 @@
         <ul>
             <li class="itens">Home</li>
             <li class="itens">About</li>
-            <li id="dropMenu" class="itens">Projects<i id="icon" class="fas fa-caret-down"></i></li>
+            <li id="dropMenu" class="itens">Projects<i id="icon" class="fas"></i></li>
             <li class="itens">Contact</li>
         </ul>
     </div>
